--- a/q/275590.html
+++ b/q/275590.html
@@ -26,30 +26,52 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>293</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
-<tr d-ix="1"><td>353</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
-<tr d-ix="2"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
-<tr d-ix="4"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="0"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="1"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="2"><td>353</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="3"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
+<tr d-ix="4"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="5"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> <s>340</s> <s>304</s> 293 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
+<pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
+</code></pre>
+<p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
+<p>The timbre corresponds to a sine wave hard-clipped at half its amplitude (this clipping costs 1 byte but produces nicer sound than a pure sine wave; the latter can be obtained by removing the <code>E</code> near the end of the code).</p>
+<p>Try it at <a href="https://matl.io/?code=0%27%214XC%40nRAxt%7E%26%27F5%3AZaKeK1X%22tP%5BAaABOlHN%5D0Y%28_%26vhYs%221875%3AYPE%2a76%2F%4012%2FW%2aY%2CE%5D%26h1e4Y%23&amp;inputs=&amp;version=22.8.0" rel="nofollow noreferrer">MATL online</a>!</p>
+<h2>How it works</h2>
+<p>Number 0 is first pushed to the stack. This will serve as the initial note. The rest of the notes will be defined by consecutive differences, measured in semitones.</p>
+<p>The basic structure of the song is described by the following 4×8 matrix:</p>
+<pre><code>2 2 2 2 2 2 4 4
+2 1 2 1 2 2 3 3
+3 4 3 4 3 3 4 4
+5 5 5 5 5 5 1 1
+</code></pre>
+<p>which contains the increments (in semitones) of the ascending arpeggios, each column corresponding to one of the 8 chords in order.</p>
+<p>To generate this matrix, the string <code>'!4XC@nRAxt~&amp;'</code> is interpreted as a &quot;number&quot; in the base defined by all ASCII characters except single quote, and is decoded into the base formed by the numbers [1 2 3 4 5], producing a row vector (this operation is done by the code <code>F5:Za</code>). Reshaping this with 4 rows (<code>Ke</code>) gives the above matrix. Then, the matrix is extended by replicating it 4 times vertically (<code>K1X&quot;</code>), because each ascending arpeggio is played 4 times. This yields a 16×8 matrix.</p>
+<p>A duplicate (<code>t</code>) of this 16×8 matrix is produced, and it is then flipped vertically (<code>P</code>). This represents the descending arpeggios, except that the sign should be negated; and the last row is incorrect, because it does not consider the transition to the next chord. Specifically, the values of the last row should be [5 −1 5 6 0 1 2 NaN] (represented compactly in the code as <code>[AaABOlHN]</code>). The final NaN value indicates that there is no following chord in the last column. Thus, the last row of the second 16×8 matrix is overwritten with that vector (<code>0Y(</code>), and the two matrices are concatenated vertically (<code>&amp;v</code>). The resulting 32×8 matrix describes the repeated up and down arpeggios for each chord, with the correct transition to the next chord. To produce the notes it should be read in column-major order (down, then across).</p>
+<p>To transform the increments between notes into the actual notes, the 0 produced at the beginning of the program is concatenated horizontally (<code>h</code>) with the 32×8 matrix. This causes the matrix to be read in column-major order, and gives a 1×257 row vector. Its cumulative sum (<code>Ys</code>) produces the notes, starting at 0, where each note is represented by the number <em>S</em> of semitones up or down from C<sub>3</sub>. The last value is NaN, which will be interpreted as no note.</p>
+<p>A <em>for each</em> loop (<code>&quot;</code>...<code>]</code>) reads each note, represented by the corresponding number <em>S</em>. To generate the waveform for the note, a time vector [1 2 ... 1875] is first created (<code>1875:</code>). The length of this vector, when replayed at 10000 samples per second, determines a tempo of 80 bpm, as required. This vector is element-wise multiplied by 2π <code>(YPE*)</code>, divided by 76 (<code>76/</code>), and then multiplied by 2 raised to the number that results from dividing <em>S</em> by 12 (<code>@12/W*</code>). Applying the sine function (<code>Y,</code>) produces a 1×1875 vector with samples of a sinusoid of the frequency correponding to <em>S</em>. The values of this vector are multiplied by 2 (<code>E</code>). The last sinusoid contains NaN values and will produce no sound.</p>
+<p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform. This waveform is then replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> <s>340</s> <s>304</s> 290 bytes</h1>
 <pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261;$A=110,123,130,174,220;$G=103,130,155,196,207
-function P($c=$C,$h=0){0..7|%{$i=$_;if($i-lt4){0..3|%{[console]::Beep(($c[$_])*[math]::Pow(2,$i+$h/12),187)}}else{4..1|%{[console]::Beep(($c[$_])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
+$q=[console]
+function P($c=$C,$h=0){0..7|%{$i=$_;if($i-lt4){0..3|%{$q::Beep(($c[$_])*[math]::Pow(2,$i+$h/12),187)}}else{4..1|%{$q::Beep(($c[$_])*[math]::Pow(2,7-$i+$h/12),187)}}}}
 P;P $A;P;P $A;P $C -7;P $C -5;P $G;P $G 2
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=jZC9boMwFIXVNU_h4UaC1lBf82May0PKkJUdRVGFjLBEcVSIMlCepEuWLn2kPk1dQoZuXe6RvnvvOdL5-Dras37rG922l8vnaaiD7PtuDbnCiFGMU4ppTPEppTxFCVuF6DCP6LwWMeWcSdgpZAtKkus1E6v61FWDsR0pPKgU5BQaxfyRhaF4X49gFBykqT0wQTvEM48cLyvb9bbV-83mWeuj535LOOz9-_L1ZWgcLezZ4xTMAzSPyH2KmfCnSbe9HuMwxP9bZIGLxr8207QqZEFgK29CICeBWDT51d08CL-2tZR2K-8H" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=jZCxboMwFEXVla-wolcJUkP9jMEpyEPKkJUdoahCRiC5kBSiDJQv6ZKlSz-pX9OEkCVTl3elc99Z7tfPrj3qj67SxpxO34e-dFe_DwtIFPqMoggphoLiS0h5iDGsFeIZc59OtRSUcxbDRiGbURBcv5m0YK-yom261ujcKg9N0ddtQ1IbCgUJhUoxZ2CeJz8fB6gVbOO6tKF2TS8m7l_4Popetd7ZZymDbe4ss_e3vsqjKG2PNqdQP0H1jNyhuJLOOGrT6UF4Hv7Dle69PY5WGqcE1vEtCCTElXMGl9xMh_DrVPNit-X-AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
 <p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell; or paste it directly into a PowerShell terminal.</p>
 <ul>
 <li>-22 from general golfs</li>
 <li>-39 from replacing <code>for</code>-loops with ranges piped into <code>ForEach-Object</code>s.</li>
 <li>-36 from reusing the back 4 notes of the chords, in reverse, for the descending arpeggios.</li>
-<li>-11 with default arguments</li>
+<li>-14 with default arguments and some simplification</li>
 </ul>
 <p><em>P.S. I keep getting this weird issue where some notes are missed; I modified the code to write out the current note and index that it's on and it is indeed running correctly, but the beeps are being clobbered by something else.</em></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 353 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 353 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
 o=a.createOscillator();[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+i)*.19)
@@ -74,7 +96,7 @@ o.stop(48.64)}</code></pre>
 </div>
 </p>
 </div>
-<div id="pu2" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
+<div id="pu3" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
 <pre><code>  10 LET t=VAL &quot;.14&quot;: LET a$=&quot;&lt;0
 247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A024
 7&lt;@047;&lt;&gt;047;&lt;&quot;: FOR i=SGN PI TO
@@ -171,7 +193,7 @@ $aC$EG$AO5c$eg$aC$EG$AO7c$eg$ag$ecO5$AG$EC$ag$ecO3$AG$EC
 $bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 136 DECLEs<sup>1</sup>=170 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
@@ -331,27 +353,6 @@ $bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
 <li><code>d0</code>, <code>d1</code>, <code>d2</code> are the delta values for the descending phase, repeated 4 times and starting at the previous octave each time</li>
 </ul>
 <p>The actual delta values are obtained by subtracting 5 to the stored values.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
-<pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
-</code></pre>
-<p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
-<p>The timbre corresponds to a sine wave hard-clipped at half its amplitude (this clipping costs 1 byte but produces nicer sound than a pure sine wave; the latter can be obtained by removing the <code>E</code> near the end of the code).</p>
-<p>Try it at <a href="https://matl.io/?code=0%27%214XC%40nRAxt%7E%26%27F5%3AZaKeK1X%22tP%5BAaABOlHN%5D0Y%28_%26vhYs%221875%3AYPE%2a76%2F%4012%2FW%2aY%2CE%5D%26h1e4Y%23&amp;inputs=&amp;version=22.8.0" rel="nofollow noreferrer">MATL online</a>!</p>
-<h2>How it works</h2>
-<p>Number 0 is first pushed to the stack. This will serve as the initial note. The rest of the notes will be defined by consecutive differences, measured in semitones.</p>
-<p>The basic structure of the song is described by the following 4×8 matrix:</p>
-<pre><code>2 2 2 2 2 2 4 4
-2 1 2 1 2 2 3 3
-3 4 3 4 3 3 4 4
-5 5 5 5 5 5 1 1
-</code></pre>
-<p>which contains the increments (in semitones) of the ascending arpeggios, each column corresponding to one of the 8 chords in order.</p>
-<p>To generate this matrix, the string <code>'!4XC@nRAxt~&amp;'</code> is interpreted as a &quot;number&quot; in the base defined by all ASCII characters except single quote, and is decoded into the base formed by the numbers [1 2 3 4 5], producing a row vector (this operation is done by the code <code>F5:Za</code>). Reshaping this with 4 rows (<code>Ke</code>) gives the above matrix. Then, the matrix is extended by replicating it 4 times vertically (<code>K1X&quot;</code>), because each ascending arpeggio is played 4 times. This yields a 16×8 matrix.</p>
-<p>A duplicate (<code>t</code>) of this 16×8 matrix is produced, and it is then flipped vertically (<code>P</code>). This represents the descending arpeggios, except that the sign should be negated; and the last row is incorrect, because it does not consider the transition to the next chord. Specifically, the values of the last row should be [5 −1 5 6 0 1 2 NaN] (represented compactly in the code as <code>[AaABOlHN]</code>). The final NaN value indicates that there is no following chord in the last column. Thus, the last row of the second 16×8 matrix is overwritten with that vector (<code>0Y(</code>), and the two matrices are concatenated vertically (<code>&amp;v</code>). The resulting 32×8 matrix describes the repeated up and down arpeggios for each chord, with the correct transition to the next chord. To produce the notes it should be read in column-major order (down, then across).</p>
-<p>To transform the increments between notes into the actual notes, the 0 produced at the beginning of the program is concatenated horizontally (<code>h</code>) with the 32×8 matrix. This causes the matrix to be read in column-major order, and gives a 1×257 row vector. Its cumulative sum (<code>Ys</code>) produces the notes, starting at 0, where each note is represented by the number <em>S</em> of semitones up or down from C<sub>3</sub>. The last value is NaN, which will be interpreted as no note.</p>
-<p>A <em>for each</em> loop (<code>&quot;</code>...<code>]</code>) reads each note, represented by the corresponding number <em>S</em>. To generate the waveform for each note, a time vector [1 2 ... 1875] is first generated (<code>1875:</code>). The length of this vector, when replayed at 10000 samples per second, determines a tempo of 80 bpm, as required. This vector is element-wise multiplied by 2*pi <code>(YPE*)</code>, divided by 76 (<code>76/</code>), and then multiplied by 2 raised to the number that results from dividing <em>S</em> by 12 (<code>@12/W*</code>). Applying the sine function (<code>Y,</code>) produces a 1×1875 vector with samples of a sinusoid of the frequency correponding to <em>S</em>. The values of this vector are multiplied by 2 (<code>E</code>). The last sinusoid contains NaN values and will produce no sound.</p>
-<p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform. This waveform is then replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> 303 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
