--- a/q/105998.html
+++ b/q/105998.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>174</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
-<tr d-ix="1"><td>060</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="0"><td>059</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
+<tr d-ix="1"><td>174</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
 <tr d-ix="2"><td>192</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
 <tr d-ix="3"><td>159</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 <tr d-ix="4"><td>164</td><td>C clang</td><td>240907T150544Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275402#275402">jdt</a></td></tr>
@@ -64,7 +64,47 @@
 <tr d-ix="35"><td>172</td><td>Befunge</td><td>170107T205422Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106028#106028">James Ho</a></td></tr>
 <tr d-ix="36"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> <sub><s>182</s></sub> 174 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> <s>60</s> 59 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p><em>Still</em> not happy the insertion of the line of dashes. And the <code>trim</code> is annoying me now, too! Another approach may be needed.</p>
+<pre><code>Hó96
+;íE¬h`Spa­` p&quot;DEL&quot;)òUÎ Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5Ngo77UWsaGBTcGGtYCBwIkRFTCIp8lXOIMtpIkRDZWhjciLzKfo1IG2sw9XLcXz7Myl4w3nIack" rel="nofollow noreferrer">Test it</a></p>
+<pre><code>Hó96\n;íE¬h`Spa­` p&quot;DEL&quot;)òUÎ Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
+H                                                               :32
+ ó96                                                            :Range [H,H+96]
+    \n                                                          :Assign to variable U
+       í                                                        :Interleave with
+      ; E                                                       :  ASCII
+         ¬                                                      :  Split to an array
+          h                                                     :  Replace the first element with
+           `Spa­`                                                :    Compressed string &quot;Space&quot;
+                 p&quot;DEL&quot;                                         :  Push &quot;DEL&quot;
+                       )                                        :End interleave
+                        ò                                       :Partitions of length
+                         UÎ                                     :  First element of U (the &quot;;&quot; changes the H variable to 65)
+                            Ë                                   :Map
+                             i                                  :  Prepend
+                              &quot;DCehcr&quot;ó                         :    Uninterleave &quot;DCehcr&quot;
+                                       )                        :  End prepend
+                                        ú5                      :  Right pad all elements with spaces to length 5
+                                           m                    :  Map
+                                            ¬                   :    Join
+                                             Ã                  :End map
+                                              Õ                 :Transpose
+                                               Ë                :Map
+                                                q|              :  Join with
+                                                  û3            :    Centre padded with space to length 3
+                                                    )           :  End join
+                                                     x          :  Trim
+                                                      Ã         :End map
+                                                       y        :Transpose
+                                                        È       :Pass each row through the following function &amp; transpose back
+                                                         iÉ     :  Insert a &quot;-&quot; at 0-based index 1
+                                                                :Implicit output joined with newlines
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> <sub><s>182</s></sub> 174 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12;c=(Space `jot -c 94 ! \~` DEL)
 for n ({32..63})for i (0 32 64){k=$[n+i];z='| ';((i&gt;32))&amp;&amp;z=\\n;printf %-5s%-6s$z $k $c[k-31]}
 </code></pre>
@@ -72,47 +112,6 @@ for n ({32..63})for i (0 32 64){k=$[n+i];z='| ';((i&gt;32))&amp;&amp;z=\\n;print
 <sub><s><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">182b</a></s></sub>
 <sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
 <sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> 60 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<p><em>Still</em> not happy the insertion of the line of dashes. And the <code>trim</code> is annoying me now, too! Another approach may be needed.</p>
-<pre><code>Hó96
-íUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=SPM5NgrtVW1kIGhgU3BhrWAgaEoiREVMIinySCDLaSJEQ2VoY3Ii8yn6NSBtrMPVy3F8%2bzMpeMN5yGnJ" rel="nofollow noreferrer">Test it</a></p>
-<pre><code>Hó96\níUmd h`Spa­` hJ&quot;DEL&quot;)òH Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
-H                                                                :32
- ó96                                                             :Range [H,H+96]
-    \n                                                           :Assign to variable U
-      í                                                          :Interleave with
-       Um                                                        :  Map U
-         d                                                       :    Character at each codepoint
-           h                                                     :  Replace the first element with
-            `Spa­`                                                :    Compressed string &quot;Space&quot;
-                  h                                              :  Replace the element at index
-                   J                                             :    -1 (i.e., the last element) with
-                    &quot;DEL&quot;                                        :    Literal string &quot;DEL&quot;
-                         )                                       :End interleave
-                          òH                                     :Partitions of length 32
-                             Ë                                   :Map
-                              i                                  :  Prepend
-                               &quot;DCehcr&quot;ó                         :    Uninterleave &quot;DCehcr&quot;
-                                        )                        :  End prepend
-                                         ú5                      :  Right pad all elements with spaces to length 5
-                                            m                    :  Map
-                                             ¬                   :    Join
-                                              Ã                  :End map
-                                               Õ                 :Transpose
-                                                Ë                :Map
-                                                 q|              :  Join with
-                                                   û3            :    Centre padded with space to length 3
-                                                     )           :  End join
-                                                      x          :  Trim
-                                                       Ã         :End map
-                                                        y        :Transpose
-                                                         È       :Pass each row through the following function &amp; transpose back
-                                                          iÉ     :  Insert a &quot;-&quot; at 0-based index 1
-                                                                 :Implicit output joined with newlines
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 192 <sup><s>194</s> <s>200</s></sup> bytes</h1>
 <blockquote>
